--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/helmet": "0.0.45",
+    "@types/mongoose": "^5.7.29",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
@@ -35,6 +36,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "mongoose": "^5.9.21",
     "morgan": "^1.10.0"
   }
 }
