--- a/package.json
+++ b/package.json
@@ -3,11 +3,36 @@
   "version": "1.0.0",
   "description": "TypeScript Express REST Starter",
   "main": "index.js",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "mongoose": "^5.11.13",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.3",
+    "@types/morgan": "^1.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
   "scripts": {
+    "setup": "mkdir logs",
+    "lint": "eslint",
     "serve": "nodemon --exec ts-node src/index.ts",
     "build": "tsc -p .",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amoghmadan/TypeScript-Express-REST-Starter.git"
   },
   "keywords": [
     "TypeScript",
@@ -17,26 +42,8 @@
   ],
   "author": "Amogh Madan",
   "license": "MIT",
-  "devDependencies": {
-    "@types/async": "^3.2.0",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/helmet": "0.0.45",
-    "@types/mongoose": "^5.7.29",
-    "@types/morgan": "^1.9.0",
-    "@types/node": "^13.13.0",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "eslint": "^6.8.0",
-    "nodemon": "^2.0.3",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+  "bugs": {
+    "url": "https://github.com/amoghmadan/TypeScript-Express-REST-Starter/issues"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "helmet": "^3.22.0",
-    "mongoose": "^5.9.21",
-    "morgan": "^1.10.0"
-  }
+  "homepage": "https://github.com/amoghmadan/TypeScript-Express-REST-Starter#readme"
 }
