--- a/package.json
+++ b/package.json
@@ -2,48 +2,52 @@
   "name": "typescript-express-rest-starter",
   "version": "1.0.0",
   "description": "TypeScript Express REST Starter",
-  "main": "index.js",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "helmet": "^4.4.1",
-    "mongoose": "^5.11.13",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.11",
-    "@types/mongoose": "^5.10.3",
-    "@types/morgan": "^1.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  },
+  "main": "dist/app.js",
   "scripts": {
-    "setup": "mkdir logs",
-    "lint": "eslint",
-    "serve": "nodemon --exec ts-node src/index.ts",
     "build": "tsc -p .",
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amoghmadan/TypeScript-Express-REST-Starter.git"
+    "lint:check": "eslint src",
+    "lint:format": "eslint --fix src",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "start": "node dist/app.js",
+    "test": "jest i"
   },
   "keywords": [
     "TypeScript",
     "Express",
-    "REST",
-    "Starter"
+    "REST"
   ],
-  "author": "Amogh Madan",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/amoghmadan/TypeScript-Express-REST-Starter/issues"
+  "author": "Amogh Madan <amoghmadaan@gmail.com>",
+  "license": "SEE LICENSE IN LICESNE",
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.0",
+    "@types/supertest": "^6.0.2",
+    "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
-  "homepage": "https://github.com/amoghmadan/TypeScript-Express-REST-Starter#readme"
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "mongoose": "^8.0.4",
+    "morgan": "^1.10.0",
+    "read": "^3.0.1",
+    "yargs": "^17.7.2"
+  }
 }
