Update parserOptions.project to tsconfig.eslint.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,10 @@
   "extends": ["airbnb-base", "airbnb-typescript/base"],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "project": "./tsconfig.json",
+    "project": "./tsconfig.eslint.json",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "max-len": ["error", 80]
+  }
 }
