--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "typescript-express-rest-starter",
+  "private": true,
   "version": "1.0.0",
   "description": "TypeScript Express REST Starter",
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc -p .",
+    "dev": "nodemon src/app.ts",
     "lint:check": "eslint src tests",
     "lint:format": "eslint --fix src tests",
-    "dev": "nodemon --exec ts-node src/app.ts",
-    "start": "node dist/app.js",
+    "start": "node --env-file=.env dist/app.js",
     "test": "jest -i"
   },
   "keywords": [
@@ -18,6 +19,10 @@
   ],
   "author": "Amogh Madan <amoghmadaan@gmail.com>",
   "license": "SEE LICENSE IN LICESNE",
+  "bugs": {
+    "url": "https://github.com/amoghmadan/TypeScript-Express-REST-Starter/issues"
+  },
+  "homepage": "https://github.com/amoghmadan/TypeScript-Express-REST-Starter#readme",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
@@ -41,7 +46,6 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
@@ -49,5 +53,9 @@
     "morgan": "^1.10.0",
     "read": "^3.0.1",
     "yargs": "^17.7.2"
+  },
+  "engines": {
+    "node": ">=20.6.0",
+    "npm": ">=10.1.0"
   }
 }
