--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/app.ts",
     "lint:check": "eslint src tests",
     "lint:format": "eslint --fix src tests",
-    "start": "node --env-file=.env dist/app.js",
+    "start": "node dist/app.js",
     "test": "jest -i"
   },
   "keywords": [
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
@@ -53,9 +54,5 @@
     "morgan": "^1.10.0",
     "read": "^3.0.1",
     "yargs": "^17.7.2"
-  },
-  "engines": {
-    "node": ">=20.6.0",
-    "npm": ">=10.1.0"
   }
 }
