--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:check": "eslint src tests",
     "lint:format": "eslint --fix src tests",
     "start": "node -r ts-node/register -r tsconfig-paths/register dist/app.js",
-    "test": "jest -i"
+    "test": "jest"
   },
   "keywords": [
     "TypeScript",
